--- a/peloton-clone/peloton-clone/PelotonCloneApp.csproj
+++ b/peloton-clone/peloton-clone/PelotonCloneApp.csproj
@@ -37,5 +37,11 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="Controls\ActiveChallengesView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
   
 </Project>
