add layout for completed challenges view

--- a/peloton-clone/peloton-clone/PelotonCloneApp.csproj
+++ b/peloton-clone/peloton-clone/PelotonCloneApp.csproj
@@ -41,6 +41,9 @@
     <EmbeddedResource Update="Controls\ActiveChallengesView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Controls\CompletedChallengesControl.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
   
